--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -1,9 +1,16 @@
+main{
+  align-items: center;
+  width: 100%;
+}
 .conteudo{
 display: flex;
 flex-direction: column;
 align-items: center;
 margin-top: 105px;
-margin-left:15%; /*50px;*/
+padding-left: 15%;
+padding-right: 15%;
+left:15%; /*50px;*/
+right: 15%;
 width: 240.52px; /* 80% */
 
 }
