--- a/Assets/CSS/header.css
+++ b/Assets/CSS/header.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  list-style: none;
 
 }
 header{
@@ -57,16 +58,24 @@ header{
     top: 12.99px;
   }
 
+  .menuBtns{
+    left: 76%;
+    
+  }
+
   #cart{
     border: none;
     background: transparent;
+    /*left: 76%;*/
+    right: 20%;
+    top: 25px;
+    position: absolute;
     cursor: pointer;
   }
   .carrinho{
-    top: 25px;
-    left: 76%;/*273px;*/
-    margin:0;
     position: absolute;
+    /*left: 76%;/*273px;*/
+    margin:0;
     width: 20px;
     height: 19px;
 
@@ -89,11 +98,12 @@ header{
     display: flex;
     align-items: center;
     text-align: center;
-    position: absolute;
+    position: relative;
     width: 16px;
     height: 16px;
-    left: 80.2%; /*287px;*/
-    top: 18.5px;
+    top: -10px;
+    left: 120%; /*287px;*/
     background: #FA9401;
     border-radius: 20px;
+    z-index: 2;
 }
