--- a/Assets/CSS/contato.css
+++ b/Assets/CSS/contato.css
@@ -3,41 +3,66 @@ h3{
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
+  left:15px;
   align-items: center;
   color: #FA9401;
   margin:15.5px;
 }
 
 .contatoBox{
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  left: 17.5px;
   font-size: 14px;
+  Line-height: 16.41px;
 
 }
 
 
 
 .infoContat li{
+  align-items: center;
   display: flex;
   flex-direction: row;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .infoContat li img{
-  width: 15px;
-  height: 20px;
   margin-right: 19.5px;
   margin-left: 19.5px;
 }
 
-.icones{
-  display: flex;
-  flex-direction: row;
+.VeLocal{
+  width: 15px;
+  height: 20px;
 }
 
-.icones li{
-  margin: 5%;
+.VeFone{
+  width: 18px;
+  height: 18px;
+}
+
+.VeSite{
+  width:20px;
+  height:16px;
+}
+
+.VeMail{
+  width:20px;
+  height:16px;
+}
+
+.icones{
+  align-items: center;
+  margin-left: 29px;
+  margin-top: 60px;
+  display: flex;
+}
+
+.icones li img{
+  margin: 12px;
 }
 
 footer{
@@ -65,4 +90,21 @@ footer{
 
 footer p{
   border-radius: 25px;
+}
+
+@media screen and (min-width: 480px) {
+  h3{
+    font-size: 18px;
+  }
+
+  .contatoBox{
+    align-items: center;
+    font-size: 16px;
+  }
+
+  footer{
+    align-items: center;
+    font-size: 18px;
+    width: 100%;
+  }
 }
