--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -20,7 +20,7 @@ width: 240.52px; /* 80% */
   width: 240.52px;
   height: 75px;
 }
-.conteudo button{
+.menuBtn button{
   background: #444242;
   border-style: none;
   border: 1px solid #FA9401;
@@ -47,16 +47,43 @@ h3{
   margin-left: 11px;
 }
 
-.conteudo button h3:hover{
+.conteudo .menuBtn button h3:hover{
   font-size: 18px;
 }
 
 #btnFirst{
   background:#FA9401;
 }
-.conteudo button img{
+.btnImg{
   width: 16px;
   height: 16px;
   margin-left: 1px;
 }
 
+@media screen and (max-width: 640px) and (max-height:360px){
+
+  .logo{
+    top:60px;
+    margin-bottom: 50px;
+  }
+
+  .conteudo{
+    margin-top: 15px;
+    padding-left: 0;
+    padding-right: 0;
+    left:15%; /*50px;*/
+    right: 15%;
+    width: 100%;
+  }
+   
+  .menuBtn{
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    margin-left: 47px;
+  }
+
+  .menuBtn button{
+    margin-right: 15px;
+  }
+}
