--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -6,3 +6,9 @@ header{
   display: flex;
   align-items: baseline;
 }
+
+@media screen and (width: 640px) and (height:360px){
+  footer{
+    display: none;
+  }
+}
