--- a/Assets/CSS/contato.css
+++ b/Assets/CSS/contato.css
@@ -1,3 +1,14 @@
+body{
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+
+  color: #5B5A5A;
+}
+
+
 h3{
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
@@ -72,7 +83,7 @@ footer{
   align-items: center;
   padding: 15px 0px;
   position: absolute;
-  width: 360px;
+  width: 100%;
   height: 30px;
   left: 0px;
   bottom: 0px;
