--- a/Assets/CSS/footer.css
+++ b/Assets/CSS/footer.css
@@ -5,10 +5,13 @@ justify-content: center;
 align-items: center;
 padding: 0px;
 position: absolute;
-width: 360px;
+width: 100%;
 height: 64px;
 left: 0px;
-top: 576px;
+bottom: 0;
+/*margin-top: 10%;
+margin-bottom: 0%;
+top: 576px;*/
 }
 
 .rodape a{
