--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -1,5 +1,7 @@
 main{
   align-items: center;
+  display: flex;
+  justify-content: center;
   width: 100%;
 }
 .conteudo{
@@ -7,8 +9,8 @@ display: flex;
 flex-direction: column;
 align-items: center;
 margin-top: 105px;
-padding-left: 15%;
-padding-right: 15%;
+padding-left: 19%;
+padding-right: 20%;
 left:15%; /*50px;*/
 right: 15%;
 width: 240.52px; /* 80% */
@@ -60,10 +62,61 @@ h3{
   margin-left: 1px;
 }
 
-@media screen and (max-width: 640px) and (max-height:360px){
+@media only screen 
+  and (min-width: 640px) 
+  and ( max-height:360px)
+  and (orientation:landscape){
 
   .logo{
     top:60px;
+    margin-bottom: 50px;
+  }
+
+  .conteudo{
+    margin-top: 15px;
+    padding-left: 0;
+    padding-right: 0;
+    left:15%; /*50px;*/
+    right: 15%;
+    width: 100%;
+  }
+   
+  .menuBtn{
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    margin-left: 47px;
+  }
+
+  .menuBtn button{
+    margin-right: 15px;
+  }
+}
+
+@media screen and (width: 320px) and (height:568px){
+
+  header{
+    background: #FFB64E;
+  }
+
+  body{
+    background: #FFB64E;
+  }
+
+  .menuBtn button{
+    background: #444242;
+  border: 2px solid #FFFFFF;
+  } 
+  
+  #btnFirst{
+    border: 2px solid #444242;
+  }
+
+}
+
+@media screen and (width: 768px) and (height:1024px) and (orientation:landscape){
+  .logo{
+    top:324px;
     margin-bottom: 50px;
   }
 
