--- a/Assets/CSS/contato.css
+++ b/Assets/CSS/contato.css
@@ -81,12 +81,11 @@ footer{
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 15px 0px;
-  position: absolute;
   width: 100%;
   height: 30px;
   left: 0px;
-  bottom: 0px;
+  margin-top: 5rem;
+  padding: 15px 0px;
   background: #FA9401;
   font-family: 'Roboto';
   font-style: normal;
@@ -115,6 +114,7 @@ footer p{
 
   footer{
     align-items: center;
+    margin-top: 3rem;
     font-size: 18px;
     width: 100%;
   }
